go-mysql-api/k8s-manifests/07-deployment-mysql-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-server
  namespace: go-mysql-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-server
      tier: data   
  template:
    metadata:
      labels:
        app: mysql-server
        tier: data
    spec:
      containers:
      - name: mysql-server
        image: 192.168.8.1:6000/mysql:latest
        volumeMounts:
        - name: mysql-pvc
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-pvc
        persistentVolumeClaim:
          claimName: mysql-pvc
