go-mysql-api/k8s-manifests/09-deployment-go-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-mysql-api-deployment
  namespace: go-mysql-api
  labels:
    app: go-mysql-api
    tier: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-mysql-api
      tier: web
  template:
    metadata:
      labels:
        app: go-mysql-api
        tier: web
    spec:
      containers:
      - name: go-mysql-api
        image: jvin911/janiths-public-repo:go-mysql-api
        imagePullPolicy: Always
      volumes:
      - name: init-sql-script
        configMap:
          name: init-sql-script
