go-mysql-api/k8s-manifests/10-service-go-application.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-mysql-api-service
  namespace: go-mysql-api
spec:
  type: ClusterIP
  ports:
  - name: go-application-port
    port: 8000
    targetPort: 8000
  selector:
    app: go-mysql-api
    tier: web
