go-mysql-api/k8s-manifests/11-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: go-mysql-api-ingress
  namespace: go-mysql-api
spec:
  rules:
  - host: go-mysql-api.vbox-local-cluster.com
    http:
      paths:
      - backend:
          service:
            name: go-mysql-api-service
            port:
              number: 8000
        path: /
        pathType: Prefix
